--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -68,6 +68,8 @@
     {% include "core/components/footer-top.html" %}
     {% include "core/components/footer-bottom.html" %}
   </footer>
+  <!-- Scroll to Top Button -->
+  <button onclick="scrollToTop()" class="" id="scrollToTopBtn"><i class="fa fa-solid fa-angles-up" aria-hidden="true"></i></button>
   
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
@@ -90,6 +92,9 @@
   <!-- Dark Mode -->
   <script src="{% static 'core/plugins/js.cookie.min.js' %}"></script>
   <script src="{% static 'core/js/dark-mode.js' %}"></script>
+
+  <!-- Scroll to Top JS -->
+  <script src="{% static 'core/js/scroll-to-top.js' %}"></script>
 
   <!-- Additional JS -->
   {% block scriptlinks %}{% endblock scriptlinks %}
