--- a/home/templates/home/components/home-middle.html
+++ b/home/templates/home/components/home-middle.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-lg-8">
                   <div class="card-body">
-                    <h5 class="card-title"><a href="/" class="theme-link">{{project.title}}</a></h5>
+                    <h5 class="card-title"><a href={{project.link}} class="theme-link">{{project.title}}</a></h5>
                     <p class="card-text">{{project.desc}}</p>
                   </div>
                 </div>
