--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -15,7 +15,7 @@
 </section>
 <section class="contact-section">
     <div class="container d-flex shadow py-5 justify-content-center">
-        <div class="auth-wrapper shadow theme-bg-light rounded p-5 w-75">
+        <div class="auth-wrapper shadow theme-bg-light rounded p-md-5 p-2 py-5">
             {% if msg_sent %}
             <div id="successAlert" class="alert alert-success d-flex align-items-center alert-dismissible" role="alert">
                 <strong class="me-2">Successfully!</strong> Your message has been sent.
