DoTechJ-Logo-Updated

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -10,13 +10,12 @@
 
     <!-- Set the favicon -->
     <link rel="icon" type="image/png" href="{% static 'core/images/favicon.ico' %}">
-    <link rel="icon" type="image/svg+xml" href="{% static 'core/images/favicon.svg' %}">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'core/images/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'core/images/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'core/images/favicon-16x16.png' %}">
     <link rel="icon" type="image/png" sizes="192x192" href="{% static 'core/images/android-chrome-192x192.png' %}">
     <link rel="manifest" href="{% static 'core/images/site.webmanifest' %}">
-    <link rel="mask-icon" href="{% static 'core/images/safari-pinned-tab.svg' %}" color="#5bbad5">
+    <link rel="mask-icon" href="{% static 'core/images/safari-pinned-tab.svg' %}" color="##7532fa">
     <meta name="msapplication-TileColor" content="#7532fa">
     <meta name="theme-color" content="#ffffff">
 
