--- a/core/templates/core/components/footer-bottom.html
+++ b/core/templates/core/components/footer-bottom.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
       <div class="col-md-8 col-sm-6 col-xs-12">
-        <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by 
+        <p class="copyright-text">Copyright &copy; 2023 - 2024 All Rights Reserved by 
      <a class="by-link" href="{% url 'home' %}">DoTech J</a>.
         </p>
       </div>
