--- a/scraping/templates/scraping/scraping_options.html
+++ b/scraping/templates/scraping/scraping_options.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load static %}
 
 {% block title %}Scraping | {{block.super}}{% endblock title %}
 
@@ -26,7 +27,7 @@
                           Assembly Hall, Karachi, Pakistan
                         </li>
                       </ul>
-                      <a href="/scraping/quaid-e-azam-speech/" class="btn btn-sm btn-block btn-success">
+                      <a href="{% url 'scraping:abraham-speech' %}" class="btn btn-sm btn-block btn-success">
                         <i class="fa fa-comment me-1" aria-hidden="true"></i>
                         View Quaid e Azam Speech
                       </a>
@@ -51,7 +52,7 @@
                           Gettysburg, Pennsylvania
                         </li>
                       </ul>
-                      <a href="/scraping/abraham-lincoln-speech/" class="btn btn-sm btn-block btn-success">
+                      <a href="{% url 'scraping:abraham-speech' %}" class="btn btn-sm btn-block btn-success">
                         <i class="fa fa-comment me-1" aria-hidden="true"></i>
                         View Gettysburg Address 
                       </a>
