--- a/scraping/templates/scraping/abraham_speech.html
+++ b/scraping/templates/scraping/abraham_speech.html
@@ -1,4 +1,5 @@
 {% extends "core/base.html" %}
+{% load static %}
 
 {% block title %}Abraham Lincoln Speech | {{block.super}}{% endblock title %}
 
