Project: Scraping Initialized

--- a/scraping/templates/scraping/quaid_speech.html
+++ b/scraping/templates/scraping/quaid_speech.html
@@ -8,7 +8,7 @@
 {% endblock links %}
 
 {% block content %}
-    {% with header='Quaid-e-Azam Quote On 11th, August 1947 Speech @ First Constituent Assembly' name='Quaid-e-Azam' src_link='https://www.goodreads.com/quotes/457259-you-are-free-you-are-free-to-go-to-your'  src_code='https://github.com/Estphu/JawadDev/tree/master/scraping' %}
+    {% with header='Quaid-e-Azam Quote On 11th, August 1947 Speech @ First Constituent Assembly' name='Quaid-e-Azam' src_link='https://www.goodreads.com/quotes/457259-you-are-free-you-are-free-to-go-to-your'  src_code='https://github.com/Estphu/JawadDev/tree/master/scraping/views.py' %}
         {% include "scraping/widgets/speech_card.html" %}
     {% endwith %}
 {% endblock content %}
