--- a/scraping/templates/scraping/abraham_speech.html
+++ b/scraping/templates/scraping/abraham_speech.html
@@ -8,7 +8,7 @@
 {% endblock links %}
 
 {% block content %}
-    {% with header='Gettysburg Address by Abraham Lincoln: 19-Nov-1863 @ Gettysburg, Pennsylvania, USA' name='Abraham Lincoln' src_link='https://www.goodreads.com/quotes/114791-four-score-and-seven-years-ago-our-fathers-brought-forth'  src_code='https://github.com/Estphu/JawadDev/tree/master/scraping' %}
+    {% with header='Gettysburg Address by Abraham Lincoln: 19-Nov-1863 @ Gettysburg, Pennsylvania, USA' name='Abraham Lincoln' src_link='https://www.goodreads.com/quotes/114791-four-score-and-seven-years-ago-our-fathers-brought-forth'  src_code='https://github.com/Estphu/JawadDev/tree/master/scraping/views.py' %}
         {% include "scraping/widgets/speech_card.html" %}
     {% endwith %}
 {% endblock content %}
