--- a/core/static/core/css/cv.css
+++ b/core/static/core/css/cv.css
@@ -69,8 +69,7 @@ body.dark-mode .cv-header {
     border-radius: 0.125rem;
     text-align: center;
     background: white;
-    color: #7532FA;
-    padding-top: 3px
+    color: #7532FA
 }
 
 .cv-section-heading {
